--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.17",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.1",
     "dompurify": "^3.2.5",
     "highlight.js": "^11.11.1",
     "i": "^0.3.7",
