--- a/src/server/coquiTTS/requirements.txt
+++ b/src/server/coquiTTS/requirements.txt
@@ -1,8 +1,8 @@
+numpy==1.23.5
+scipy==1.10.1
+librosa==0.10.1
 TTS==0.13.3
-torch>=1.13.0
-numpy>=1.20.0
-scipy>=1.10.0
-librosa>=0.10.0
+torch==1.13.1
 unidecode>=1.3.6
 inflect>=6.0.0
 pydub>=0.25.1
