--- a/package.json
+++ b/package.json
@@ -5,16 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build:server": "tsc -p tsconfig.server.json",
-    "build:client": "vite build",
-    "build": "npm run build:server && npm run build:client",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.17",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.1",
     "dompurify": "^3.2.5",
     "highlight.js": "^11.11.1",
     "i": "^0.3.7",
