--- a/src/server/coquiTTS/requirements.txt
+++ b/src/server/coquiTTS/requirements.txt
@@ -2,7 +2,9 @@ numpy==1.23.5
 scipy==1.10.1
 librosa==0.10.1
 TTS==0.13.3
-torch==1.13.1
+torch>=2.6.0
 unidecode>=1.3.6
 inflect>=6.0.0
 pydub>=0.25.1
+fastapi>=0.110.0
+uvicorn[standard]>=0.29.0
